feat: add resume run api #32
